[package]
name = "vpnsky"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
config = "0.15.22"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
spdlog-rs = "0.5.3"
tempdir = "0.3.7"
thiserror = "2.0.18"
